maplibre-style-spec/src/generator/items/enum/snapshots/maplibre_style_spec__generator__items__r#enum__regular__tests__generate_spec_weird_keys.snap
---
source: maplibre-style-spec/src/generator/items/enum/regular.rs
expression: "crate::generator::generate_spec_scope(&spec)"
---
/// JSON number in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct NumberLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_number))]
    serde_json::Number,
);

/// JSON string in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct StringLiteral(std::string::String);

/// GeoJSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct GeoJSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_geojson))]
    geojson::GeoJson,
);

/// JSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_value))]
    serde_json::Value,
);

/// JSON array literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONArrayLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_vec_json_value))]
    Vec<serde_json::Value>,
);

/// Array whose elements are string literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfStringLiteral(Vec<StringLiteral>);

/// Array whose elements are number literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfNumberLiteral(Vec<NumberLiteral>);

/// This is a Maplibre Style Specification
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct MaplibreStyleSpecification;

/// An expression node or a literal JSON value in expression positions.
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
#[serde(untagged)]
pub enum ExprOrLiteral {
    Null,
    Bool(bool),
    NumberLiteral(NumberLiteral),
    StringLiteral(StringLiteral),
    GeoJSONObjectLiteral(GeoJSONObjectLiteral),
    JSONObjectLiteral(JSONObjectLiteral),
    JSONArrayLiteral(JSONArrayLiteral),
    AnyExpr(Box<Any>),
    ArrayExpr(Box<Array>),
    BooleanExpr(Box<Boolean>),
    CollatorExpr(Box<Collator>),
    ColorExpr(Box<Color>),
    FormattedExpr(Box<Formatted>),
    ImageExpr(Box<Image>),
    NumberExpr(Box<Number>),
    ObjectExpr(Box<Object>),
    StringExpr(Box<String>),
}

#[cfg(test)]
mod test {
    use super::*;

}
